# raft-ebpf

./: INSTALL.md  Makefile  README.md  RUN.md
architecture/heartbeats/: heartbeats.excalidraw
architecture/leader_election/: leader_election.excalidraw
measurements/heartbeats/: mixed-no-optimized-udp-and-parellel-low-load  mixed-optimized-udp-and-parellel-high-load  mixed-optimized-udp-and-parellel-low-load  optimized-udp-and-parallel-low-load-node-1  optimized-udp-and-parallel-low-load-node-2  optimized-udp-low-load-node-1  optimized-udp-low-load-node-2  unoptimized-high-load-node-1  unoptimized-high-load-node-2  unoptimized-low-load-node-1  unoptimized-low-load-node-2
measurements/leader_election/: 3-nodes-multi-thread-node-1.csv  3-nodes-multi-thread-node-2.csv  3-nodes-multi-thread-node-3.csv  3-nodes-single-thread-node-1.csv  3-nodes-single-thread-node-2.csv  3-nodes-single-thread-node-3.csv  5-nodes-multi-thread.csv  5-nodes-single-thread.csv
measurements/xdp_vs_udp/: mixed-udp-only  mixed-udp-with-xdp
raft/: Cargo.toml
raft/raft-main/: Cargo.toml
raft/raft-main-common/: Cargo.toml
raft/raft-main-common/src/: lib.rs
raft/raft-main-ebpf/: Cargo.toml
raft/raft-main-ebpf/src/: helpers_raft.rs  helpers_xdp.rs  main.rs  maps.rs
raft/raft-main/src/: fsm_candidate.rs  fsm_follower.rs  fsm_leader.rs  fsm_single_thread.rs  helpers.rs  main.rs  routes.rs  state.rs  values.rs
raft/xtask/src/: build_ebpf.rs  run.rs
